# UTNHub

./: .gitignore  AGENTS.md  CLAUDE.md  PROYECTO.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.lambda-instagram  Dockerfile.lambda-utn-web  alembic.ini  pyproject.toml  requirements-lambda-instagram.txt  requirements-lambda-utn-web.txt
backend/alembic/: env.py
backend/alembic/versions/: 29394d2b65e3_initial_schema.py  6ff16f5c4cea_add_unique_constraint_usuario_materia.py  a1f7c2d3e4b5_multi_fuente_centro.py  a3f8c2d91b47_cuatrimestre_text_con_anual_y_1_y_2.py  a7c3e9f1b2d4_add_origen_evento_calendario.py  b2c3d4e5f6a7_add_profesor_id_to_cursada.py  b3e8f1c2a9d7_novedad_contenido.py  b8e5d2a17f3c_profesor_unique_nombre_email.py  b8f4d1a6c2e9_inscripcion_a_evento.py  c1d2e3f4a5b6_examen_sistema_a_mesa.py  c4a1b8d2e9f0_add_evento_calendario.py  c4d5e6f7a8b9_review_catedra.py  d1e2f3a4b5c6_refactor_comision_cursada.py  e1f2a3b4c5d6_add_cursada_id_to_usuario_materia.py  e7c3f1a9b204_novedad_ingesta_pipeline.py  f3a2b1c9d8e7_add_docente_to_comision.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  clasificador_novedades.py  placeholders.py
backend/app/api/: __init__.py  calendario.py  comisiones.py  materias.py  novedades.py  profesores.py  usuario_materia.py
backend/app/core/: __init__.py  exceptions.py  storage.py
backend/app/db/: base.py  session.py
backend/app/lambda_handlers/: ingesta_instagram.py  ingesta_utn_web.py
backend/app/repositories/: __init__.py  calendario_repo.py  comision_repo.py  (+4 more)
backend/scripts/: seed_horarios.py  seed_isi_2023.py
backend/tests/: test_calendario.py  test_cursada_profesor.py  test_novedades.py  test_review_catedra.py
(+147 files in other folders)
