[project]
  name = "utnhub"
  version = "0.1.0"
  requires-python = ">=3.12"
  dependencies = [
      "fastapi>=0.115",
      "uvicorn[standard]>=0.34",
      "sqlalchemy>=2.0",
      "alembic>=1.15",
      "psycopg2-binary>=2.9",
      "pgvector>=0.4",
      "pydantic>=2.0",
      "pydantic-settings>=2.0",
      "python-dotenv>=1.0",
      "langchain>=0.3",
      "langchain-community>=0.3",
      "langchain-openai>=0.3",
      "langgraph>=0.3",
      "apscheduler>=3.11",
      "instagrapi>=2.1",
      "beautifulsoup4>=4.13",
      "pandas>=2.2",
      "pymupdf>=1.25",
      "httpx>=0.28",
      "python-jose[cryptography]>=3.4",
      "passlib[bcrypt]>=1.7",
      "rapidfuzz>=3.0",
  ]

  [dependency-groups]
  dev = [
      "pytest>=8.0",
      "pytest-asyncio>=0.25",
      "httpx>=0.28",
      "ruff>=0.9",
  ]
